# allround

./: .editorconfig  .env.server  .gitignore  LICENSE  README.md  api_init.py  app.db  app_init.py  dashboard_init.py  environment.py  gunicorn.conf.py  main.py  main_viewer.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: python-package.yml
api/: __init__.py
api/main/: __init__.py  _root.py
api/v1/: __init__.py  _root.py  auth.py  pages.py
api_server/app/: __init__.py  base.py
api_server/libs/: render_json.py  routes_merge.py
app/: __init__.py  _openapi.yml  database.py  environment.py  models.py
app_server/app/: __init__.py  blueprints.py
app_server/libs/: render_json.py  routes_merge.py
components/: fileio.py  page.py  pagehandler.py  password.py  render_json.py  table.py  tablehandler.py  token.py  user.py
core/: fileio.py  message.py
dashboard/app/: __init__.py  base.py
dashboard/libs/: render.py  sass_build.py
dashboard/routes/: __init__.py  index.py
defaults/: allround-dashboard.service  allround.service
migrations/: env.py
migrations/versions/: 09e5caa0b47a_fix_page_type.py  2cf2e7a3b12f_add_tokenrefreshers_table.py  308fc4ae3f90_initial_database.py  32f6794f60da_set_to_biginteger.py  50ec56c01479_unique_refresh_token.py  5c98ed60c7b9_fix_sqlite_autoincrement.py  61c019615353_add_indexes_to_tables.py  76b364ed8c6d_support_mysql.py  8972e10e3ce6_add_pages_and_page_folders.py  9d0c5c629bfa_add_tables.py  c9ddcdcf0b2d_initial_database.py  dd23061f0fd7_add_uuid_column.py  (+1 more)
viewer/: __init__.py
(+16 files in other folders)
