[project]
name = "allround"
version = "0.1.0"
authors = [{name="Douglas Han", email="doug.han@bmov.co"}]
description = "Ultimate CRUD helper"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiomysql==0.2.0",
    "aiosqlite==0.20.0",
    "alembic==1.13.1",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.1.3",
    "connexion[swagger-ui]==3.0.6",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.18",
    "sqlalchemy==2.0.38",
    "uvicorn>=0.35.0",
]
[dependency-groups]
dev = [
  "flake8>=7.3.0",
  "pytest==8.2.0",
]
